Adds the eslintrc file along with prettierrc file and also adds the background image and other images to the app

--- a/public/main.html
+++ b/public/main.html
@@ -32,10 +32,10 @@
         </div>
       </nav>
   </header>
-  <!--Hero image -->
+  <!--Hero image 
   <image>
     <img src="/assets/imgs/pic.jpg" alt="Job Search" style="height: 500px; width: 100%;">
-  </image>
+  </image>-->
   
   <!--Search and add jobs layout-->  
 <div class="tile is-ancestor">
